--- a/core/app/views/main_full_v3.html
+++ b/core/app/views/main_full_v3.html
@@ -22,6 +22,7 @@
 #{get 'moreStyles' /}
 #{render '_js_header_v3.html' /}
 #{get 'moreScripts' /}
+
 </head>
 
 <body class="hold-transition skin-black-light sidebar-collapse">
@@ -36,5 +37,6 @@
 #{render 'aside.html'/}
 </div>
 
+#{script 'bootstrap3/demo.js'/}
 </body>
 </html>
